--- a/pages/cal/cal.wxss
+++ b/pages/cal/cal.wxss
@@ -4,23 +4,28 @@ page{
 }
 
 .screen{
+  
   position: fixed;
-  top: 150rpx;
+  flex-wrap: wrap;
+  top:10%;
   word-wrap: break-word;
-  width: 750rpx;
+  text-align: right;
+  width: 100%;
+  
 }
 .screen view{
   color: #fff;
-  font-size: 68px;
+  font-size: 60px;
   text-align: right;
   padding-right: 80rpx;
   padding-bottom: 20rpx;
-  font-weight: 300;
+  
 }
 
 .btnGroup{
   display: flex;
   flex-direction: row;
+  
 }
 
 .btn-item{
@@ -28,6 +33,7 @@ page{
   width: 150rpx;
   height: 150rpx;
   text-align: center;
+  justify-content: center;
   line-height: 150rpx;
   border-radius: 75rpx;
   font-size: 25px;
@@ -35,6 +41,7 @@ page{
   margin-bottom: 15rpx;
   margin-top: 5rpx;
   font-weight: 600;
+  
 }
 
 .zero{
